--- a/bun-app/src/index.css
+++ b/bun-app/src/index.css
@@ -36,7 +36,7 @@ button {
   border-radius: 8px;
   padding: 0.5rem 0.75rem;
   box-shadow: 0 0px 1px hsla(0, 0%, 0%, 0.2), 0 1px 2px hsla(0, 0%, 0%, 0.2);
-  background-color: white;
+  background-color: #fcf4e0;
   line-height: 1.5;
   margin: 0;
 }
@@ -104,10 +104,14 @@ form[action$="destroy"] button {
 
 #sidebar {
   width: 18rem;
-  background-color: #f7f7f7;
+  background-color: #fff8e7;
   border-right: solid 1px #e3e3e3;
   display: flex;
   flex-direction: column;
+  top: 0;
+    left: 0;
+    position: fixed;
+    height: 100%;
 }
 
 #sidebar > * {
@@ -134,16 +138,8 @@ form[action$="destroy"] button {
   top: 1px;
 }
 
-#sidebar > div {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid #e3e3e3;
-}
-
 #sidebar > div form {
+  margin-left: 0.5rem;;
   position: relative;
 }
 
@@ -180,12 +176,6 @@ form[action$="destroy"] button {
   }
 }
 
-#sidebar nav {
-  flex: 1;
-  overflow: auto;
-  padding-top: 1rem;
-}
-
 #sidebar nav a span {
   float: right;
   color: #eeb004;
@@ -199,12 +189,6 @@ i {
 }
 #sidebar nav .active i {
   color: inherit;
-}
-
-#sidebar ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
 }
 
 #sidebar li {
@@ -241,7 +225,9 @@ i {
 #detail {
   flex: 1;
   padding: 2rem 4rem;
+  padding-left: 20em;
   width: 100%;
+  width: 100vw;
 }
 
 #detail.loading {
@@ -381,6 +367,15 @@ i {
   width: 100%;
 }
 
-img, iframe {
+/* img, iframe {
   max-width: 100%;
+  width: 100px;
+} */
+
+#banana {
+  background-color:#f44250;
+}
+
+body {
+  background-color: #fffaef;
 }
